deploy/kubernetes/base/log-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: log-server
  name: log-server
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: log-server
    spec:
      containers:
      - name: trillian-logserver
        args: [
        "--mysql_uri=$(DB_NAME)",
        "--cloudspanner_uri=$(DB_NAME)",
        "--storage_system=$(DB_ENGINE)",
        "--quota_system=noop",
        "--rpc_endpoint=0.0.0.0:8090",
        "--http_endpoint=0.0.0.0:8091",
        "--alsologtostderr"
        ]
        image: gcr.io/trillian-opensource-ci/log_server:latest
        livenessProbe:
         httpGet:
           path: /metrics
           port: 8091
        name: log-server
        ports:
        - containerPort: 8090
        - containerPort: 8091
        resources: {}
      restartPolicy: Always
status: {}
