deploy/kubernetes/base/log-signer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: log-signer
  name: log-signer
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: log-signer
    spec:
      volumes: []
      containers:
      - name: trillian-logsigner
        args: [
        "--mysql_uri=$(DB_NAME)",
        "--cloudspanner_uri=$(DB_NAME)",
        "--storage_system=$(DB_ENGINE)",
        "--quota_system=noop",
        "--http_endpoint=0.0.0.0:8091",
        "--sequencer_guard_window=0s",
        "--sequencer_interval=1s",
        "--num_sequencers=1",
        "--batch_size=50",
        "--force_master=true",
        "--alsologtostderr"
        ]
        image: gcr.io/trillian-opensource-ci/log_signer:latest
        livenessProbe:
         httpGet:
           path: /metrics
           port: 8091
        name: log-signer
        ports:
        - containerPort: 8091
        resources: {}
        volumeMounts: []
      restartPolicy: Always
status: {}
