deploy/kubernetes/base/monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: monitor
  name: monitor
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: monitor
    spec:
      volumes:
       - name: secrets
         secret:
           secretName: kt-secrets
      containers:
      - command:
        - /keytransparency-monitor
        - --addr=0.0.0.0:8099
        - --kt-url=server:443
        - --insecure
        - --directoryid=default
        - --tls-key=/run/secrets/server.key
        - --tls-cert=/run/secrets/server.crt
        - --sign-key=/run/secrets/monitor_sign-key.pem
        - --password=towel
        - --alsologtostderr
        - --v=3
        image: gcr.io/key-transparency/keytransparency-monitor:latest
        livenessProbe:
         httpGet:
           path: /healthz
           port: 8099
           scheme: HTTPS
        readinessProbe:
         httpGet:
           path: /readyz
           port: 8099
           scheme: HTTPS
        name: monitor
        ports:
        - containerPort: 8099
        resources: {}
        volumeMounts:
        - name: secrets
          mountPath: "/run/secrets"
          readOnly: true
      restartPolicy: Always
status: {}
