deploy/kubernetes/base/log-signer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: log-signer
  name: log-signer
spec:
  ports:
  - name: "8091"
    port: 8091
    targetPort: 8091
  selector:
    io.kompose.service: log-signer
status:
  loadBalancer: {}
