deploy/kubernetes/base/map-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: map-server
  name: map-server
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  - name: "8091"
    port: 8091
    targetPort: 8091
  selector:
    io.kompose.service: map-server
status:
  loadBalancer: {}
