deploy/kubernetes/base/monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: monitor
  name: monitor
spec:
  ports:
  - name: "8099"
    port: 8099
    targetPort: 8099
  selector:
    io.kompose.service: monitor
status:
  loadBalancer: {}
