deploy/kubernetes/base/sequencer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: sequencer
  name: sequencer
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    io.kompose.service: sequencer
status:
  loadBalancer: {}
