deploy/kubernetes/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
  - name: "grpc-api"
    port: 8080
    targetPort: 8080
  - name: "http-metrics"
    port: 8081
    targetPort: 8081
  selector:
    io.kompose.service: server
  type: NodePort
status:
  loadBalancer: {}
